added simplee dict

--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -471,6 +471,7 @@
     "* Player starts with 200 hp (health points)\n",
     "* A bad decision cost the player to lose 25 hp.\n",
     "* **While** the player HP is greater than 0, continue playing\n",
+    "* **For** each actions, display it from a list of Strings\n",
     "\n",
     "## Input() Function\n",
     "* Retrieve the player input"
@@ -527,6 +528,158 @@
     }
    },
    "source": [
+    "# Dictionaries\n",
+    "### quick intro\n",
+    "- Dictionaries are another Type of variable `dict()`\n",
+    "- Follow only one concept: **Key and Value**\n",
+    "- Can contain deeper informations, with explicit hierarchy\n",
+    "- Data are not ordered (contrary to `list()` )\n",
+    "- Value can be accessed by its associated Key\n",
+    "- **Keys are unique** you cannot associate multiple values to one key. \n",
+    "* `keys()` returns the list of keys, `values()` returns the list of values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize an empty dictionary\n",
+    "dico = {}\n",
+    "dico = dict() # both ways are corrects\n",
+    "\n",
+    "# intialize with values\n",
+    "dico = { \"key\" : \"value\" }\n",
+    "print(dico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# more concrete example\n",
+    "player = { \"name\":\"gaël\", \"health\":200 }\n",
+    "print(player)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Access data from a dict\n",
+    "- By specifying the key : number, boolean  or String\n",
+    "- Commonly used with String keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "player[\"name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the list of keys\n",
+    "print( player.keys() )\n",
+    "\n",
+    "# get the list of values\n",
+    "print( player.values() )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Insert or modify data in a dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# modify or create the key\n",
+    "player[\"items\"] = ['bottle', 'laptop']\n",
+    "print(player)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete a key : two methods\n",
+    "deletedValue = player.pop('items', None)\n",
+    "print(deletedValue)\n",
+    "print(player)\n",
+    "\n",
+    "# if you are certain the key exists\n",
+    "player[\"items\"] = ['bottle', 'laptop']\n",
+    "del player['items']\n",
+    "print(player)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Represent bigger data\n",
+    "- With variable types, especially dict() and list() you can handle more interesting data.\n",
+    "- You will often need to represent **nested data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example\n",
+    "user = {\n",
+    "    'name': 'john',\n",
+    "    'age': 19,\n",
+    "    'job': 'student',\n",
+    "    'friends': ['jack', 'paul'],\n",
+    "    'stats': {\n",
+    "        'social': 'friendly',\n",
+    "        'seriousness': 'bad',\n",
+    "        'formerEmployeee': False\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Install local python environnement\n",
     "At home you may want to use Python locally. Here are the steps:\n",
     "1. Download the latest Python (Python3 not 2) from here: [https://www.python.org/downloads/](https://www.python.org/downloads/)\n",
@@ -534,7 +687,9 @@
     "\n",
     "Start using it:\n",
     "- Open terminal(unix/mac) or CommandLine(windows), type `python` to start an interactive python environnement\n",
-    "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`."
+    "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`.\n",
+    "\n",
+    "To code you mmay need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
    ]
   }
  ],
