added html and static slides versions + dict course

--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -8,8 +8,6 @@
     }
    },
    "source": [
-    "<center>\n",
-    "    \n",
     "# Introduction to Programming – Python\n",
     "----\n",
     "\n",
@@ -21,9 +19,7 @@
     "\n",
     "Original content inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
-    "Licenced under Affero GNU3\n",
-    "\n",
-    "</center>"
+    "Licenced under Affero GNU3"
    ]
   },
   {
