added functions quick intro and rpg4

--- a/python-3.ipynb
+++ b/python-3.ipynb
@@ -50,20 +50,23 @@
    },
    "source": [
     "# Dictionaries\n",
-    "### quick intro\n",
     "- Dictionaries are another Type of variable `dict()`\n",
     "- Follow only one concept: **Key and Value**\n",
     "- Can contain deeper informations, with explicit hierarchy\n",
     "- Data are not ordered (contrary to `list()` )\n",
     "- Value can be accessed by its associated Key\n",
     "- **Keys are unique** you cannot associate multiple values to one key. \n",
-    "* `keys()` returns the list of keys, `values()` returns the list of values\n"
+    "* `keys()` returns the list of keys, `values()` returns the list of values (you just need to change its type to list())\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# initialize an empty dictionary\n",
@@ -115,10 +118,10 @@
    "outputs": [],
    "source": [
     "# get the list of keys\n",
-    "print( player.keys() )\n",
+    "print( list( player.keys() ) )\n",
     "\n",
     "# get the list of values\n",
-    "print( player.values() )\n"
+    "print( list( player.values() ) )\n"
    ]
   },
   {
@@ -346,17 +349,15 @@
     }
    },
    "source": [
-    "# Basic Role Playing Game (2)\n",
+    "# Basic Role Playing Game (3)\n",
     "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
-    "* To do so you need one additional function (see below)\n",
     "\n",
     "## Rules\n",
     "* Player advance from a room to another by textually selecting one of the rooms. \n",
     "* Player starts with 200 hp (health points)\n",
     "* A bad decision cost the player to lose 25 hp.\n",
-    "* While the player HP is greater than 0, continue playing\n",
     "* For each actions, display it from a list of Strings\n",
-    "* **Represent data as dictionaries or a big nested dict()**"
+    "* **Represent data as dictionaries or a big nested dict()** (see example below)"
    ]
   },
   {
@@ -369,40 +370,45 @@
    },
    "outputs": [],
    "source": [
-    "# Examples\n",
     "# Get the input function and display a greeting message\n",
+    "player = dict()\n",
     "print(\"Hello Player One, what's your name?\")\n",
-    "playerName = input()\n",
-    "print(\"Welcome\", playerName)\n",
+    "player['name'] = input()\n",
+    "print(\"Welcome\", player['name'])\n",
     "\n",
-    "choice = \"\"\n",
-    "choices = [\"first\", \"second\"]\n",
-    "while choice not in choices:\n",
+    "choice = ''\n",
+    "events = { 'first': {'message': 'Game Over! Try again' + player['name']},\n",
+    "        'second': {'message': 'Upon opening the door, you can see a huge fest with exquisite meals everywhere.'}\n",
+    "         }\n",
+    "pastEvents = []  \n",
+    "\n",
+    "while choice not in events.keys():\n",
     "    print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
     "    You are in front of two doors. Behind the first one you can hear muffled voices. \n",
     "    Behind the second one you can smell something intriguing.''')\n",
-    "    print('Which door do you choose? Type', choices[0], 'for the first room and', choices[1], 'for the second room.')\n",
+    "    print('Which door do you choose? Type', list(events.keys())[0], 'for the first room and', list(events.keys())[1], \n",
+    "          'for the second room.')\n",
     "    choice = input()\n",
-    "    if choice == 'first':\n",
-    "        print('Game Over! Try again', playerName)\n",
-    "    elif choice == 'second':\n",
-    "        print('Upon opening the door, you can see a huge fest with exquisite meals everywhere.')\n",
+    "    if choice in events.keys():\n",
+    "        pastEvents.append(choice)\n",
+    "        print(events[choice]['message'])\n",
     "    else:\n",
-    "        print('WRONG : Possible choices', choices)\n"
+    "        print('WRONG : Possible choices', list(events.keys()) )\n",
+    "\n",
+    "print(pastEvents)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
     "* Complete the Role Playing Game skeleton by adding choices, player HP, etc. \n",
-    "* *Tip: this kind of game is a decision tree of choices.*\n",
+    "* *Tip: this kind of game is a decision tree of choices.* : the decision tree is represented as a nested dictionary\n",
     "* Use while to keep the playing going on until certain conditions\n",
-    "* Use while to check the player hp\n",
     "* Use for to display player' items or actions"
    ]
   },
@@ -424,6 +430,220 @@
     "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`.\n",
     "\n",
     "To code you mmay need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Functions\n",
+    "### Quick intro\n",
+    "A function is a subprogram, a way to reuse the same code again and again by just calling it.\n",
+    "\n",
+    "Functions have:\n",
+    "- A name\n",
+    "- Arguments (if specified)\n",
+    "\n",
+    "Functions do:\n",
+    "- A process\n",
+    "- Return something (if specified)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Use *docstrings* to documentate functions:\n",
+    "```\n",
+    "\"\"\" this function does this process and return that value but need those arguments \"\"\"\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mySuperbFunction(arg1, arg2):\n",
+    "    \"\"\" \n",
+    "    This superb function needs 2 arguments.\n",
+    "    It returns None (such a shame! this function is still useless)\n",
+    "    \"\"\"\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Examples\n",
+    "This function return the sum of the three arguments."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumItUp(arg1, arg2, arg3):\n",
+    "    \"\"\"\n",
+    "    Well, this is but a sum of the 3 args.\n",
+    "    \"\"\"\n",
+    "    return arg1 + arg2 + arg3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now that I defined my function I can use it like this\n",
+    "resultSum = sumItUp(2,3,-5)\n",
+    "print(resultSum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Functions optional arguments with default value\n",
+    "- Some arguments can have a default value, hence their declaration is optional.\n",
+    "- Mandatory args always comes before optional ones\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DEFine the function\n",
+    "def createStudent( age, grade, name='noname'):\n",
+    "    \"\"\" This creates a student dict with default name as 'noname' \"\"\"\n",
+    "    return {'name':name, 'age':age, 'grade':grade}\n",
+    "\n",
+    "# now use it\n",
+    "print( createStudent(19, 20) )\n",
+    "print( createStudent( 19, 20, name='superStudent' ) )\n",
+    "# as you can see, the name arg is optional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this will not work due to the optional arg placed before a mandatory one\n",
+    "createStudent(name='thisStudent', 19, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this will not work due to the lack of mandatory args\n",
+    "createStudent(19)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Basic Role Playing Game (4)\n",
+    "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
+    "\n",
+    "## Rules\n",
+    "* Player advance from a room to another by textually selecting one of the rooms. \n",
+    "* Player starts with 200 hp (health points)\n",
+    "* A bad decision cost the player to lose 25 hp.\n",
+    "* For each actions, display it from a list of Strings\n",
+    "* **Represent data as dictionaries or a big nested dict()** (see example below)\n",
+    "* **Use functions** to remove code duplicates and reduce the line numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Example with dict and basic functions\n",
+    "player = dict()\n",
+    "print(\"Hello Player One, what's your name?\")\n",
+    "player['name'] = input()\n",
+    "print(\"Welcome\", player['name'])\n",
+    "\n",
+    "events = { \n",
+    "    'first': {\n",
+    "        'message': 'Game Over! Try again ' + player['name']\n",
+    "    },\n",
+    "    'second': {\n",
+    "        'message': '''Upon opening the door, you can see a huge fest with exquisite meals everywhere. \n",
+    "                   Will you eat it?''', \n",
+    "        'paths': {\n",
+    "            'yes': { 'message': 'You died from poison'},\n",
+    "            'no': { 'message': '`You died from hunger'}\n",
+    "        }}\n",
+    "}\n",
+    "pastChoices = []  \n",
+    "\n",
+    "\n",
+    "\n",
+    "def askAction(event, choices):\n",
+    "    '''\n",
+    "    Ask an action from the user. Stay alive while the action is not recognized.\n",
+    "    '''\n",
+    "    choice = ''\n",
+    "    while choice not in choices:\n",
+    "        choice = input()\n",
+    "        if choice in choices:\n",
+    "            print(event[choice]['message'])\n",
+    "            pastChoices.append(choice)\n",
+    "            if('paths' in event[choice]):\n",
+    "                askAction(event[choice]['paths'], list(event[choice]['paths'].keys()) )\n",
+    "        else:\n",
+    "            print('WRONG : Possible choices', choices )\n",
+    "    return True\n",
+    "            \n",
+    "print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
+    "        You are in front of two doors. Behind the first one you can hear muffled voices. \n",
+    "        Behind the second one you can smell something intriguing.''')\n",
+    "print('Which door do you choose? Type', list(events.keys())[0], 'for the first room and', list(events.keys())[1], \n",
+    "              'for the second room.')\n",
+    "\n",
+    "askAction(events, list(events.keys()) )\n",
+    "    \n",
+    "print('You finished playing the game. Here are your past actions :', pastChoices)"
    ]
   }
  ],
