better visu and updated html files

--- a/python-3.ipynb
+++ b/python-3.ipynb
@@ -377,9 +377,15 @@
     "print(\"Welcome\", player['name'])\n",
     "\n",
     "choice = ''\n",
-    "events = { 'first': {'message': 'Game Over! Try again' + player['name']},\n",
-    "        'second': {'message': 'Upon opening the door, you can see a huge fest with exquisite meals everywhere.'}\n",
-    "         }\n",
+    "events = \n",
+    "{ \n",
+    "    'first': {\n",
+    "        'message': 'Game Over! Try again' + player['name']\n",
+    "    },\n",
+    "    'second': {\n",
+    "        'message': 'Upon opening the door, you can see a huge fest with exquisite meals everywhere.'\n",
+    "    }\n",
+    "}\n",
     "pastEvents = []  \n",
     "\n",
     "while choice not in events.keys():\n",
