--- a/python-4.ipynb
+++ b/python-4.ipynb
@@ -11,13 +11,12 @@
     "# Introduction to Programming – Python\n",
     "----\n",
     "\n",
-    "## Course 3 – dictionaries & functions\n",
+    "## Course 4 – Exercices and functions\n",
     "\n",
     "### ESSEC Business School\n",
     "\n",
     "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
     "\n",
-    "Original content inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
     "Licenced under Affero GNU3"
    ]
@@ -38,28 +37,11 @@
     "- **conditions and nested conditions** : indentations !\n",
     "- **lists and lists functions** : `list()`, `myList = ['hello', 'world']`, `myList.append()`, `len(myList)` etc.\n",
     "- **loops** : while `while conditionIsTrue:` and for `for element in elementList:`, `break`, `continue`\n",
+    "- **dictionaries** : `dict()`, `{key:value}`, nested dict `{key: {key:value} }`, `list(d.keys())`, `for k,v in d.items()`\n",
     "- Mini textual game"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Dictionaries\n",
-    "- Dictionaries are another Type of variable `dict()`\n",
-    "- Follow only one concept: **Key and Value**\n",
-    "- Can contain deeper informations, with explicit hierarchy\n",
-    "- Data are not ordered (contrary to `list()` )\n",
-    "- Value can be accessed by its associated Key\n",
-    "- **Keys are unique** you cannot associate multiple values to one key. \n",
-    "* `keys()` returns the list of keys, `values()` returns the list of values (you just need to change its type to list())\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -67,269 +49,6 @@
      "slide_type": "slide"
     }
    },
-   "outputs": [],
-   "source": [
-    "# initialize an empty dictionary\n",
-    "dico = {}\n",
-    "dico = dict() # both ways are corrects\n",
-    "\n",
-    "# intialize with values\n",
-    "dico = { \"key\" : \"value\" }\n",
-    "print(dico)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# more concrete example\n",
-    "player = { \"name\":\"gaël\", \"health\":200 }\n",
-    "print(player)\n",
-    "\n",
-    "student = {'name':'zhanyi', 'age'.... 'friends':['friend1', 'friend2'] }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Access data from a dict\n",
-    "- By specifying the key : number, boolean  or String\n",
-    "- Commonly used with String keys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player[\"name\"] = 'whatever'\n",
-    "print(player['name'])\n",
-    "print(player)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the list of keys\n",
-    "print( list( player.keys() ) )\n",
-    "\n",
-    "# get the list of values\n",
-    "print( list( player.values() ) )\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Insert or modify data in a dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# modify or create the key\n",
-    "player[\"items\"] = ['bottle', 'laptop']\n",
-    "print(player)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# delete a key : two methods\n",
-    "deletedValue = player.pop('items', None)\n",
-    "print(deletedValue)\n",
-    "print(player)\n",
-    "\n",
-    "# if you are certain the key exists\n",
-    "player[\"items\"] = ['bottle', 'laptop']\n",
-    "del player['items']\n",
-    "print(player)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Explore a dict()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first populate the dict\n",
-    "# player = {'name':'gael',   'inventory': ['rose', 'pencil', 'smartphone'],   'grade':'noob'}\n",
-    "player = dict()\n",
-    "player['name'] = 'gael'\n",
-    "player['inventory'] = ['rose', 'pencil', 'smartphone']\n",
-    "player['grade'] = 'noob'\n",
-    "print('player =', player)\n",
-    "# get list of keys\n",
-    "print( player.keys(), type(player.keys()), len(player.keys()) )\n",
-    "# get list of values\n",
-    "print( player.values(), type(player.values()), len(player.values()) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Check if a key exist:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nameFieldExists = 'name' in player\n",
-    "print( 'Does the \"name\" field exists in the dictionary \"player\" ?', nameFieldExists)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "itemsFieldExists = 'items' in player\n",
-    "print( 'Does the \"items\" field exists in the dictionary \"player\" ?', itemsFieldExists)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Iterate over fields in a dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key, value in player.items():\n",
-    "    print('key =', key, ' ; value =', value)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Get or add field and value\n",
-    "`setdefault(key, defaultValue)` returns the value associated to the key. If the key does not exist, it adds the key associated to `defaultValue`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "player.setdefault('age', 20)\n",
-    "print(player)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Safely access non present field\n",
-    "Using `player[key]` will yield an error.\n",
-    "You can safely try to access a field by using `player.get(key)`. \n",
-    "Returns the value if the key exists, else returns None.\n",
-    "\n",
-    "``\n",
-    "(in pseudo algo)\n",
-    "IF key exists:\n",
-    "    RETURN the associated value\n",
-    "ELSE: \n",
-    "    RETURN None\n",
-    "``"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print( player['unknownKey'] ) # gives an error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(player)\n",
-    "print( player.get('unknownKey')) # returns None\n",
-    "print( player.get('name') ) # it exists"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Represent bigger data\n",
-    "- With variable types, especially dict() and list() you can handle more interesting data.\n",
-    "- You will often need to represent **nested data**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "# example\n",
@@ -357,64 +76,26 @@
     }
    },
    "source": [
-    "# Basic Role Playing Game (3)\n",
-    "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
-    "\n",
-    "## Rules\n",
-    "* Player advance from a room to another by textually selecting one of the rooms. \n",
-    "* Player starts with 200 hp (health points)\n",
-    "* A bad decision cost the player to lose 25 hp.\n",
-    "* For each actions, display it from a list of Strings\n",
-    "* **Represent data as dictionaries or a big nested dict()** (see example below)"
+    "# Nested Dictionaries : exercices\n",
+    "Create a dictionary that represent some cat physical attributes (always print your changes):\n",
+    "- Physical attributes\n",
+    "    - Is it an animal?\n",
+    "    - How many lives does it have?\n",
+    "    - How many legs?\n",
+    "    - What is its maximum age?\n",
+    "- Behavior attributes\n",
+    "    - Does it bites?\n",
+    "    - What kind of sound does it makes?\n",
+    "    - Level of agressiveness: low, medium or high"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    " # Get the input function and display a greeting message\n",
-    "player = dict() \n",
-    "print(\"Hello Player One, what's your name?\")\n",
-    "player['name'] = input()\n",
-    "print(\"Welcome\", player['name'])\n",
-    "\n",
-    "choice = ''\n",
-    "events = { \n",
-    "    'first': {\n",
-    "        'message': 'Game Over! Try again' + player['name']\n",
-    "    },\n",
-    "    'second': {\n",
-    "        'messages': ['Upon opening the door, you can see a huge fest with exquisite meals everywhere.', 'heyy'],\n",
-    "        'follow':{}\n",
-    "    }\n",
-    "}\n",
-    "pastEvents = []  \n",
-    "\n",
-    "while choice not in events.keys():\n",
-    "    print('''Your are in a tiny room. Humidity fills the air but your stomach reminds you that you are very hungry.\n",
-    "    You are in front of two doors. Behind the first one you can hear muffled voices. \n",
-    "    Behind the second one you can smell something intriguing.''')\n",
-    "    print('Which door do you choose? Type', list(events.keys())[0], 'for the first room and', list(events.keys())[1], \n",
-    "          'for the second room.')\n",
-    "    choice = input()\n",
-    "    if choice in events.keys():\n",
-    "        pastEvents.append(choice)\n",
-    "        if type(events[choice]['message']) == str():\n",
-    "        if 'messages' in events[choice]:\n",
-    "            for message in events[choice]['messages']:\n",
-    "                print(message)\n",
-    "        else:\n",
-    "            print(events[choice]['message'])\n",
-    "    else:\n",
-    "        print('WRONG : Possible choices', list(events.keys()) )\n",
-    "\n",
-    "print(pastEvents)"
+    "# create the cat dictionary here"
    ]
   },
   {
@@ -425,11 +106,29 @@
     }
    },
    "source": [
-    "* Complete the Role Playing Game skeleton by adding choices, player HP, etc. \n",
-    "* *Tip: this kind of game is a decision tree of choices.* : the decision tree is represented as a nested dictionary\n",
-    "* Use while to keep the playing going on until certain conditions\n",
-    "* Use for to display player' items or actions"
+    "Print the number of lives of this cat:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print the number of attributes the cat possess:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -439,17 +138,176 @@
     }
    },
    "source": [
-    "# Install local python environnement\n",
-    "At home you may want to use Python locally. Here are the steps:\n",
-    "1. Download the latest Python (Python3 not 2) from here: [https://www.python.org/downloads/](https://www.python.org/downloads/)\n",
-    "2. Install it (if you are using Ubuntu 16.04 you already have Python installed)\n",
-    "\n",
-    "Start using it:\n",
-    "- Open terminal(unix/mac) or CommandLine(windows), type `python` to start an interactive python environnement\n",
-    "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`.\n",
-    "\n",
-    "To code you mmay need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
+    "Create another dictionary representing some dog attributes:\n",
+    "- Physical attributes\n",
+    "    - Is it an animal?\n",
+    "    - How many lives does it have?\n",
+    "    - How many legs?\n",
+    "    - What is its maximum age?\n",
+    "- Behavior attributes\n",
+    "    - Does it bites?\n",
+    "    - What kind of sound does it makes?\n",
+    "    - Level of agressiveness: low, medium or high "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Remove the 'animal' attribute from both the cat and dog dictionaries:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Going deeper in nested dictionaries\n",
+    "\n",
+    "Create a dictionary for livingThings: two fields: \n",
+    "- animals\n",
+    "    - instances (list)\n",
+    "- humans\n",
+    "    - instances (list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Insert the list of animals (the cat and the dog dicts) inside a 'types' field under the 'animals' field in the livingThings. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Insert the 'averageMaxAge' in the 'animals' field. (Use basic math operations for this - see course 1 -)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Create your neighboor as a dictionary.\n",
+    "- What's his/her firstName?\n",
+    "- What's his/her lastName?\n",
+    "- What are his/her favorite foods?\n",
+    "- Does he/she have a sweet tooth?\n",
+    "- Does he/she prefer cats or dogs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Create yourself as a dictionary.\n",
+    "- What's your firstName?\n",
+    "- What's your lastName?\n",
+    "- What are your favorite foods?\n",
+    "- Do you have a sweet tooth?\n",
+    "- Do you prefer cats or dogs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Put these two dictionaries into the 'instances' list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print your livingThings dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -584,6 +442,34 @@
    "source": [
     "# this will not work due to the lack of mandatory args\n",
     "createStudent(19)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Arbitrary number of arguments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def showGroup(groupName, *students, **infos):\n",
+    "    print('group', groupName)\n",
+    "    print('Students:')\n",
+    "    for student in students:\n",
+    "        print(student)\n",
+    "    print('Infos')\n",
+    "    for status, number in infos.items():\n",
+    "        print(status, number)\n",
+    "showGroup('B2', 'Shuyi', 'Vincent', 'Alizé', 'Mehdi', pythonLovers=2, superStudents=4)"
    ]
   },
   {
