--- a/python-4.ipynb
+++ b/python-4.ipynb
@@ -17,6 +17,7 @@
     "\n",
     "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
     "\n",
+    "Original content, some parts inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
     "Licenced under Affero GNU3"
    ]
@@ -165,7 +166,7 @@
     }
    },
    "source": [
-    "Remove the 'animal' attribute from both the cat and dog dictionaries:"
+    "Remove the *'animal'* attribute from both the cat and dog dictionaries:"
    ]
   },
   {
@@ -185,7 +186,7 @@
    "source": [
     "## Going deeper in nested dictionaries\n",
     "\n",
-    "Create a dictionary for livingThings: two fields: \n",
+    "Create a dictionary for *livingThings*: two fields: \n",
     "- animals\n",
     "    - instances (list)\n",
     "- humans\n",
@@ -207,7 +208,7 @@
     }
    },
    "source": [
-    "Insert the list of animals (the cat and the dog dicts) inside a 'types' field under the 'animals' field in the livingThings. "
+    "Insert the list of animals (the cat and the dog dicts) inside a *'types'* field under the *'animals'* field in the livingThings. "
    ]
   },
   {
@@ -221,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Insert the 'averageMaxAge' in the 'animals' field. (Use basic math operations for this - see course 1 -)"
+    "Insert the *'averageMaxAge'* in the *'animals'* field. (Use basic math operations for this - see course 1 -)"
    ]
   },
   {
@@ -285,7 +286,7 @@
     }
    },
    "source": [
-    "Put these two dictionaries into the 'instances' list."
+    "Put these two dictionaries into the *'instances'* list."
    ]
   },
   {
@@ -299,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print your livingThings dictionary."
+    "Print your *livingThings* dictionary."
    ]
   },
   {
@@ -318,7 +319,6 @@
    },
    "source": [
     "# Functions\n",
-    "### Quick intro\n",
     "A function is a subprogram, a way to reuse the same code again and again by just calling it.\n",
     "\n",
     "Functions have:\n",
@@ -480,6 +480,54 @@
     }
    },
    "source": [
+    "## Variable scope\n",
+    "- Variables defined inside a function possess a local scope (not accessible outside of this function)\n",
+    "- Variables defined outside a function possess a global scope\n",
+    "\n",
+    "For instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "globalVar = 'I am defined outside a function'\n",
+    "def doThis(myVar):\n",
+    "    scopedVar = 'I am defined inside a function'\n",
+    "    globalVar = 'yes' # available because it is global\n",
+    "    return True\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(globalVar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(scopedVar)\n",
+    "# it does not work because we are not inside the function where it is defined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Basic Role Playing Game (4)\n",
     "* Objective: construct a textual role playing game. The game is only text with choices, conditions to verify the choices and player status.\n",
     "\n",
@@ -489,7 +537,8 @@
     "* A bad decision cost the player to lose 25 hp.\n",
     "* For each actions, display it from a list of Strings\n",
     "* **Represent data as dictionaries or a big nested dict()** (see example below)\n",
-    "* **Use functions** to remove code duplicates and reduce the line numbers"
+    "* **Use functions** to remove code duplicates and reduce the line numbers\n",
+    "* **Add status and health modification function**"
    ]
   },
   {
@@ -506,6 +555,7 @@
     "player = dict()\n",
     "print(\"Hello Player One, what's your name?\")\n",
     "player['name'] = input()\n",
+    "player['health'] = 200\n",
     "print(\"Welcome\", player['name'])\n",
     "\n",
     "events = { \n",
@@ -516,13 +566,19 @@
     "        'message': '''Upon opening the door, you can see a huge fest with exquisite meals everywhere. \n",
     "                   Will you eat it?''', \n",
     "        'paths': {\n",
-    "            'yes': { 'message': 'You died from poison'},\n",
-    "            'no': { 'message': '`You died from hunger'}\n",
+    "            'yes': { 'message': 'You ate poison and lost 20 hp', 'hploss': 20},\n",
+    "            'no': { 'message': 'You are still hungry and lose a bit of hp from hunger', 'hploss': 10}\n",
     "        }}\n",
     "}\n",
     "pastChoices = []  \n",
     "\n",
-    "\n",
+    "def removeHealth(amount):\n",
+    "    '''  remove some health from the player. And check if he died. '''\n",
+    "    player['health'] -= amount\n",
+    "    if player['health'] <= 0:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
     "\n",
     "def askAction(event, choices):\n",
     "    '''\n",
@@ -533,6 +589,9 @@
     "        choice = input()\n",
     "        if choice in choices:\n",
     "            print(event[choice]['message'])\n",
+    "            if 'hploss' in event[choice]: \n",
+    "                alive = removeHealth(event[choice]['hploss'])\n",
+    "                if not alive : break\n",
     "            pastChoices.append(choice)\n",
     "            if('paths' in event[choice]):\n",
     "                askAction(event[choice]['paths'], list(event[choice]['paths'].keys()) )\n",
@@ -550,6 +609,13 @@
     "    \n",
     "print('You finished playing the game. Here are your past actions :', pastChoices)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
