update rpg eample with function health modification + static versions

--- a/python-4.ipynb
+++ b/python-4.ipynb
@@ -551,7 +551,7 @@
    },
    "outputs": [],
    "source": [
-    "# Example with dict and basic functions\n",
+    "# Example with dict and basic functions and health management\n",
     "player = dict()\n",
     "print(\"Hello Player One, what's your name?\")\n",
     "player['name'] = input()\n",
@@ -586,6 +586,7 @@
     "    '''\n",
     "    choice = ''\n",
     "    while choice not in choices:\n",
+    "        print('player status', player)\n",
     "        choice = input()\n",
     "        if choice in choices:\n",
     "            print(event[choice]['message'])\n",
@@ -607,15 +608,9 @@
     "\n",
     "askAction(events, list(events.keys()) )\n",
     "    \n",
-    "print('You finished playing the game. Here are your past actions :', pastChoices)"
+    "print('You finished playing the game. Here are your past actions :', pastChoices)\n",
+    "print('Here are your remaining stats', player)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
