added correction for livingThings and dictionary manipulation

--- a/python-4.ipynb
+++ b/python-4.ipynb
@@ -96,7 +96,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the cat dictionary here"
+    "# create the cat dictionary here\n",
+    "cat = {\n",
+    "    'physical': {\n",
+    "        'animal': True,\n",
+    "        'lives': 9,\n",
+    "        'legs': 4,\n",
+    "        'maxAge': 15\n",
+    "    },\n",
+    "    'behavior':{\n",
+    "        'bites': False,\n",
+    "        'sound': 'meow',\n",
+    "        'agressiveness': 'low'\n",
+    "    }\n",
+    "}\n",
+    "print(cat)"
    ]
   },
   {
@@ -115,7 +129,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lives = cat['physical']['lives']\n",
+    "print(lives)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +146,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "globalAttributes = len(cat.keys())\n",
+    "nestedAttributes = len(cat['physical'].keys()) + len(cat['behavior'].keys())\n",
+    "print('the cat possess', globalAttributes, 'global attributes and', nestedAttributes, 'nested attributes')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,7 +177,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dog = {\n",
+    "    'physical': {\n",
+    "        'animal': True,\n",
+    "        'lives': 1,\n",
+    "        'legs': 4,\n",
+    "        'maxAge': 11\n",
+    "    },\n",
+    "    'behavior': {\n",
+    "        'bites': True,\n",
+    "        'sound': 'bark',\n",
+    "        'aggressiveness': 'medium'\n",
+    "    }\n",
+    "}\n",
+    "print( dog )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,7 +210,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print( 'dog before removal', dog)\n",
+    "del dog['physical']['animal'] \n",
+    "print( 'dog after removal', dog)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,7 +238,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "livingThings = {\n",
+    "    'animals': {\n",
+    "        'instances': list()\n",
+    "    },\n",
+    "    'humans': {\n",
+    "        'instances': list()\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print( livingThings )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -208,7 +259,7 @@
     }
    },
    "source": [
-    "Insert the list of animals (the cat and the dog dicts) inside a *'types'* field under the *'animals'* field in the livingThings. "
+    "Insert the list of animals (the cat and the dog dicts) inside a *'instances'* field under the *'animals'* field in the livingThings. "
    ]
   },
   {
@@ -216,7 +267,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "livingThings['animals']['instances'].append(dog)\n",
+    "livingThings['animals']['instances'].append(cat)\n",
+    "print( livingThings )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,7 +285,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# First we intialize a variable to increment the total age from the animal instances\n",
+    "totalAge = 0\n",
+    "# Second we loop over the animal instances to get their 'maxAge' and add it to the totalAge variable\n",
+    "for animal in livingThings['animals']['instances']:\n",
+    "    totalAge = totalAge + animal['physical']['maxAge']\n",
+    "# Third we use basic math operations to compute the average max age and put it into a 'averageMaxAge' variable\n",
+    "# total / numberOfElements = basic average here it will be : (11+15) / 2 \n",
+    "# the number of elements is the length of the list of animal instances\n",
+    "averageMaxAge = totalAge / len( livingThings['animals']['instances'] ) \n",
+    "# Finally we put the value into the desired field of our livingThings dictionary\n",
+    "livingThings['animals']['averageMaxAge'] = averageMaxAge\n",
+    "\n",
+    "# Now we can print the averageMaxAge\n",
+    "print( 'average maximum age of animals =', livingThings['animals']['averageMaxAge'] )\n",
+    "\n",
+    "# and print our whole dictionary\n",
+    "print( livingThings )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +326,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Now you can easily continue by using your neighboor as a source of infos "
+   ]
   },
   {
    "cell_type": "markdown",
