--- a/python-5.ipynb
+++ b/python-5.ipynb
@@ -156,7 +156,7 @@
     "myFile = open('test.txt', 'r') # open an existing file with 'r' (r = read)\n",
     "fileContent = myFile.read() # put the content into a variable\n",
     "myFile.close()\n",
-    "print(fileContent) # display the content"
+    "print(fileContent, type(fileContent)) # display the content"
    ]
   },
   {
@@ -314,7 +314,7 @@
     "myFile = open('test.json', 'r')\n",
     "content = json.load(myFile)\n",
     "print(type(content))\n",
-    "print(content)\n",
+    "#print(content)\n",
     "print(content['run'])"
    ]
   },
@@ -368,7 +368,7 @@
    "outputs": [],
    "source": [
     "# first import the sys module (sys = system)\n",
-    "import sys"
+    "import sys, json, re"
    ]
   },
   {
@@ -409,6 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "del cake\n",
     "try:\n",
     "    print( cake )\n",
     "except:\n",
@@ -562,7 +563,7 @@
    },
    "outputs": [],
    "source": [
-    "# Example with dict and basic functions and health management\n",
+    "# Example with dict and  ba sic functions and health management\n",
     "# Placeholders for you to insert requested code\n",
     "player = dict()\n",
     "print(\"Hello Player One, what's your name?\")\n",
