dev meetup modif

--- a/devmeetup.ipynb
+++ b/devmeetup.ipynb
@@ -44,11 +44,24 @@
    },
    "source": [
     "# What is RISE ?\n",
-    "- Jupyter notebook -> **interactive** revealjs slides\n",
+    "- Jupyter notebook extension -> **interactive** revealjs slides\n",
     "- Allows markdown\n",
     "- Can revert from slide to notebook\n",
     "- https://rise.readthedocs.io/en/maint-5.5/\n",
     "- Need a 'postBuild' and 'requirements.txt' files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# put some code"
    ]
   },
   {
