dev meetup modif

--- a/devmeetup.ipynb
+++ b/devmeetup.ipynb
@@ -66,7 +66,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Advantages\n",
     "- **Fast** content creation: for lazy people (Really fast)\n",
