added hackernight starter pack

--- a/devmeetup.ipynb
+++ b/devmeetup.ipynb
@@ -61,7 +61,8 @@
    },
    "outputs": [],
    "source": [
-    "# put some code"
+    "# put some code\n",
+    "print('hey')"
    ]
   },
   {
@@ -122,7 +123,9 @@
    "source": [
     "# Binder for Students Participation\n",
     "\n",
-    "Binder + RISE + Jupyter Notebook = really cool interactive slides"
+    "Binder + RISE + Jupyter Notebook = really cool interactive slides\n",
+    "\n",
+    "https://mybinder.org/v2/gh/gguibon/essec-python-1/master?filepath=devmeetup.ipynb"
    ]
   },
   {
