--- a/python-2.ipynb
+++ b/python-2.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "### ESSEC Business School\n",
     "\n",
-    "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
+    "[gael.guibon@gmail.com](gael.guibon@gmail.com)\n",
+    "\n",
+    "[gael.guibon@telecom-paris.fr](gael.guibon@telecom-paris.fr)\n",
     "\n",
     "Original content inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
@@ -87,8 +89,8 @@
     "students = list() # another list initialization. Empty\n",
     "\n",
     "# initialize with values\n",
-    "students = ['Vincent','Alizée', 'Medhi', 'Zhuoran', 'Cynthia', 'Alexandre'] # initialize list with values (prefered way)\n",
-    "students = list(['Vincent','Alizée', 'Medhi', 'Zhuoran', 'Cynthia', 'Alexandre']) # overkill !\n",
+    "students = ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien'] # initialize list with values (prefered way)\n",
+    "students = list(['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']) # overkill !\n",
     "\n",
     "# access\n",
     "students[0] # access element by index"
@@ -159,7 +161,7 @@
    "outputs": [],
    "source": [
     "# init\n",
-    "students = ['Vincent','Alizée', 'Medhi', 'Zhuoran', 'Cynthia', 'Alexandre']"
+    "students = ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']"
    ]
   },
   {
@@ -169,7 +171,7 @@
    "outputs": [],
    "source": [
     "# append a student\n",
-    "students.append('Jiang')\n",
+    "students.append('Monica')\n",
     "print(students)"
    ]
   },
@@ -180,7 +182,7 @@
    "outputs": [],
    "source": [
     "# append multiple students\n",
-    "students.extend(['Dionysios', 'Mekhla'])\n",
+    "students.extend(['Enora', 'Ishita'])\n",
     "print( students )"
    ]
   },
@@ -206,7 +208,7 @@
    "outputs": [],
    "source": [
     "# remove first element with this value\n",
-    "students.remove('Alizée')\n",
+    "students.remove('Monica')\n",
     "print(students)"
    ]
   },
@@ -217,10 +219,10 @@
    "outputs": [],
    "source": [
     "# sort list and get index\n",
-    "print('Vincent is index', students.index('Vincent'))\n",
+    "print('Brice is index', students.index('Brice'))\n",
     "students.sort()\n",
     "print(students)\n",
-    "print('Vincent is now index', students.index('Vincent'))"
+    "print('Brice is now index', students.index('Brice'))"
    ]
   },
   {
@@ -442,9 +444,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for student in ['Vincent','Alizée', 'Medhi', 'Zhuoran', 'Cynthia', 'Alexandre']:\n",
-    "    if student != 'Alexandre':\n",
-    "        print(student, 'is not Alexandre!')\n",
+    "for student in ['Brice','Ghita', 'Joshua', 'Maty', 'Quynh Chi', 'Julien']:\n",
+    "    if student != 'Julien':\n",
+    "        print(student, 'is not Julien!')\n",
     "        break # try it with 'continue' instead\n",
     "    else:\n",
     "        print('found him!')"
@@ -685,7 +687,7 @@
     "- Open terminal(unix/mac) or CommandLine(windows), type `python` to start an interactive python environnement\n",
     "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`.\n",
     "\n",
-    "To code you mmay need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
+    "To code you may need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
    ]
   }
  ],
@@ -706,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.2"
   },
   "livereveal": {
    "autolaunch": true,
