--- a/python-3.ipynb
+++ b/python-3.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "### ESSEC Business School\n",
     "\n",
-    "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
+    "[gael.guibon@gmail.com](gael.guibon@gmail.com)\n",
+    "\n",
+    "[gael.guibon@telecom-paris.fr](gael.guibon@telecom-paris.fr)\n",
     "\n",
     "Original content inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
@@ -448,7 +450,7 @@
     "- Open terminal(unix/mac) or CommandLine(windows), type `python` to start an interactive python environnement\n",
     "- Create a file named `my_super_program.py` and type `print('hello')` inside. Execute this file by typing `python3 my_super_program.py`.\n",
     "\n",
-    "To code you mmay need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
+    "To code you may need an IDE for smoother coding. I would suggest [Visual Studio Code](https://code.visualstudio.com/Download). For a python only IDE the best one would be [PyCharm](https://www.jetbrains.com/pycharm/)."
    ]
   },
   {
@@ -683,7 +685,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.2"
   },
   "livereveal": {
    "autolaunch": true,
