--- a/python-4.ipynb
+++ b/python-4.ipynb
@@ -15,7 +15,9 @@
     "\n",
     "### ESSEC Business School\n",
     "\n",
-    "[gael.guibon@inria.fr](gael.guibon@inria.fr)\n",
+    "[gael.guibon@gmail.com](gael.guibon@gmail.com)\n",
+    "\n",
+    "[gael.guibon@telecom-paris.fr](gael.guibon@telecom-paris.fr)\n",
     "\n",
     "Original content, some parts inspired by [Clement Plancq's IM courses](https://github.com/clement-plancq/python-im)\n",
     "\n",
@@ -705,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.5.2"
   },
   "livereveal": {
    "autolaunch": true,
